# ai-advent-challenge

./: .gitignore
day01/: main.py  pyproject.toml
day02/: README.md  main.py
day03/: README.md  main.py
day04/: main.py  выводы.txt
day05/: README.md  main.py  выводы.txt
day06/: agent.py  main.py
day08/: agent.py  longtext.txt  longtext2.txt
day09/: README.md  agent.py  main.py
day10/: README.md  agent.py  context_strategies.py  main.py  pyproject.toml  test.py
day11/: agent.py  main.py  memory_extractor.py
day12/: README.md  agent.py  cmd  main.py  memory_manager.py  profile1.md  profile2.md  vk.txt
day13/: .gitignore  README.md  research_agent.py
day14/: README.md  agent.py  invariants.json
day15/: README.md  research_agent.py
day16/: README.md  mcp_list_tools.py  pyproject.toml
day17/: README.md  todo_agent.py  todo_mcp_server.py
day18/: README.md  pyproject.toml  reminder_agent.py  reminder_server.py  result
day19/: README.md  agent.py  pyproject.toml  server.py
day20/: README.md  agent.py  main.py  pyproject.toml  server_filesystem.py  server_search.py
day21/: .gitignore  README.md  main.py  pyproject.toml
day22/: README.md  main.py  pyproject.toml  questions.json  result.md  results.json
day23/: main.py
day24/: README.md  main.py  (+2 more)
day27/: .gitignore  CLAUDE.md  pyproject.toml
day27/documents/: yandex.docx
day27/src/: file_extractor.py  history_manager.py  llm_client.py  logger.py  main.py  merger.py  models.py
day32/: .gitignore  README.md  main.py  pyproject.toml
day32/review/: agent.py  github.py  rag.py
(+65 files in other folders)
