[project]
name = "pr-review-agent"
version = "0.1.0"

description = "AI code review agent for GitHub PRs (Day 32)"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=0.5",
    "openai>=2.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["review"]
